fix: wrapping for long activities

--- a/scss/_custom-settings.scss
+++ b/scss/_custom-settings.scss
@@ -525,6 +525,7 @@ label[for] {
 
 	h1 {
 		margin-bottom: 0;
+		word-break: break-word;
 	}
 
 	&:not(.align-justify){
@@ -1156,6 +1157,8 @@ label[for] {
 	}
 	.activity-description {
 		line-height: 1.4;
+		word-break: break-all;
+  		overflow-wrap: break-word;
 	}
 }
 
